<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AddRecipeActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/add_recipe"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="36sp">
        </TextView>

        <ImageView
            android:id="@+id/recipeImageIV"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="5dp">
        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/recipe_name_label"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black">
            </TextView>

            <EditText
                android:id="@+id/recipeNameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/type_label"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black">
            </TextView>

            <Spinner
                android:id="@+id/recipeTypeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/ingredient_label"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black">
            </TextView>

            <EditText
                android:id="@+id/recipeIngredientET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/step_label"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black">
            </TextView>

            <EditText
                android:id="@+id/recipeStepET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:weightSum="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner_button"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/add_image_button"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white">
            </Button>

            <Button
                android:id="@+id/addButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner_button"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/add_recipe"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white">
            </Button>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
